k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: milsabores
  labels:
    app.kubernetes.io/part-of: milsabores
